add review controller
